[package]
name = "bc7enc-sys"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Rust bindings to the bc7enc BC1, BC3, BC4, BC5, and BC7 encoder."
repository = "https://github.com/BVE-Reborn/texcrunch"
license = "MIT OR Unlicense"
keywords = []
categories = []

exclude = [
    "bc7enc",
]
include = [
    "bc7enc/rgbcx.h",
    "bc7enc/bc7enc.c"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53"
cc = "1"
