[package]
name = "ispc-texcomp-sys"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Rust bindings to the ispc-texcomp BC1, BC3, BC6H, BC7, ETC1, and ASTC encoder."
repository = "https://github.com/BVE-Reborn/texcrunch"
license = "MIT"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1"
ispc = "1.0.9"