[package]
name = "texcrunch"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Abstraction layer and rust bindings for BC1 (DXT1), BC3 (DXT5), BC4 (RGTC1), BC5 (RGTC2), BC6H (BPTC float), BC7 (BPTC unorm), ETC1, and ASTC encoders"
readme = "README.md"
repository = "https://github.com/BVE-Reborn/texcrunch"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []

[features]
default = ["bc7e", "bc7enc", "squish"]
bc7e = ["bc7e-sys"]
bc7enc = ["bc7enc-sys"]

[dependencies]
bc7e-sys = { version = "0.1", path = "../bc7e-sys", optional = true }
bc7enc-sys = { version = "0.1", path = "../bc7enc-sys", optional = true }
squish = { version = "1.0.0", optional = true }